se agrega título h2 a section actividad-2.2

--- a/Ejercicios/clase-2/actividad-2.2.html
+++ b/Ejercicios/clase-2/actividad-2.2.html
@@ -24,8 +24,8 @@
             <p>Rip Curl es una compañía para y sobre la tripulación en la búsqueda, The Search. Los productos que fabricamos, los eventos que hacemos, los riders que apoyamos y las personas a las que llegamos globalmente, todas son parte de la busqueda continua de Rip Curl.</p>
         </section>
         <section>
+            <h2>Tabla de Productos</h2>
             <table>
-                <caption>Precios</caption>
                 <thead>
                     <tr>
                         <th>Producto</th>
