--- a/Ejercicios/clase-2/actividad-2.4.html
+++ b/Ejercicios/clase-2/actividad-2.4.html
@@ -183,9 +183,9 @@
         </fieldset>
         <fieldset>
             <legend>Correo y contraseña</legend>
-            <label>Correo electrónico:<input type="email" required></label>
-            <label>Contraseña:<input type="password" required pattern="[A-Za-z0-9]{8,}"></label>
-            <label>Confirme contraseña:<input type="password" required pattern="[A-Za-z0-9]{8,}"></label>
+            <label for="correo">Correo electrónico:<input type="email" id="correo" name="correo" required></label>
+            <label for="contrasena">Contraseña:<input type="password" id="contrasena" name="contrasena" required pattern="[A-Za-z0-9]{8,}"></label>
+            <label for="confirmapass">Confirme contraseña:<input type="password" id="confirmapass" name="confirmapass" required pattern="[A-Za-z0-9]{8,}"></label>
         </fieldset>
         <label><input type="checkbox">Acepto los términos y condiciones.</label>
         <button type="submit">Enviar</button>
