se cambia section por div linea 20

--- a/Ejercicios/clase-3/actividad-3.2.html
+++ b/Ejercicios/clase-3/actividad-3.2.html
@@ -17,7 +17,7 @@
                 <img src="https://media.istockphoto.com/id/854725372/es/foto/alimentos-saludables-comer-selección-limpio.jpg?s=1024x1024&w=is&k=20&c=eBkqZkE2sMRmxxVGce0Y8WMXRSusdNaXG2DZRm1AGxA=" alt="Roller saltando">
             </picture>
         </figure>
-        <section>
+        <div>
             <p>Para evitar que los <span id="blue-bold">vegetales</span> pierdan sus vitaminas al momento de cocción, deben cocinarse los más próximo al momento de consumo y seguir los siguientes consejos:</p>
             <ol>
                 <li>Cocer las verduras enteras o con lo menos cortes posibles y con cáscara</li>
@@ -30,7 +30,7 @@
                 <li>Respetar los tiempos máximos de cocción.</li>
                 <li>Usar el agua de cocción de verduras para otras preparaciones ej. sopas.</li>
             </ol>
-        </section>
+        </div>
         <section>
             <h2>Tiempo de Cocción de Verduras</h2>
             <table>
